Edited save/subscribes endpoint
